后台框架链接

--- a/src/main/resources/templates/kuangjia/frame.html
+++ b/src/main/resources/templates/kuangjia/frame.html
@@ -102,7 +102,7 @@
 							</shiro:hasRole>
 							<shiro:hasRole name="admin">
 								<li class="layui-nav-item">
-									<a class="to-url" data-url="https://172.17.55.210:3000"><i class="layui-icon layui-icon-console"></i>平台服务监控</a>
+									<a class="to-url" data-url="http://172.17.55.210:3000/d/xfpJB9FGz/pod-ji-qun-jian-kong?orgId=1&refresh=30m"><i class="layui-icon layui-icon-console"></i>平台服务监控</a>
 								</li>
 								<li class="layui-nav-item">
 									<a class="to-url" data-url="http://172.17.55.54:32567"><i class="layui-icon layui-icon-console"></i>集群资源监控</a>
